--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.5.0
-python-multipart==0.0.6
-numpy==1.24.3
-fuzzywuzzy==0.18.0
-python-Levenshtein==0.21.1
-jellyfish==0.11.2
-transformers==4.36.0
-torch==2.1.0
-requests==2.31.0 
+fastapi
+uvicorn
+pydantic
+python-multipart
+setuptools>=68
+wheel>=0.41
+numpy==1.26.4
+fuzzywuzzy
+python-Levenshtein
+jellyfish
+transformers
+torch
+requests
