--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,9 @@ services:
       python --version
       pip install --upgrade pip setuptools wheel
       pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 8000
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.10
+      - key: AI_DISABLE_MODELS
+        value: "true"
